--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && sexit 1"
   },
-  "author": "porteous89",
-  "license": "MIT",
+  "author": "Alister",
+  "license": "ISC",
   "devDependencies": {
     "bootstrap": "4.1.3",
     "chai": "^4.1.2",
@@ -20,6 +20,7 @@
     "lite-server": "^2.3.0",
     "nodemon": "^1.17.3",
     "truffle": "5.0.2",
-    "truffle-contract": "3.0.6"
+    "truffle-contract": "3.0.6",
+    "web3": "^0.20.6"
   }
 }
